styled button, fixed form, wrapped text in about me section

--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ body.dark-mode {
 
 .website {
   flex-grow: 2;
-  height: 3000px;
+  height: 100%;
   width: 100vh;
   display: flex;
   align-items: center;
@@ -102,12 +102,13 @@ h4 {
   justify-content: space-between;
   align-items: center;
   font-size: 20px;
-
+  flex-wrap: wrap;
   margin: 50px;
 }
 
 #about-me-text {
   margin-right: 50px;
+  width: 45%;
 }
 
 .icon {
@@ -186,7 +187,7 @@ li {
 .carousel {
   position: relative;
   height: 800px;
-  width: 1000px;
+  width: 90%;
 }
 
 .carousel-image {
@@ -327,9 +328,11 @@ input {
 
 #send-message-button {
   background-color: white;
+  border: solid black 1px;
   transform: translateX(50%);
   border-radius: 5px;
   margin-bottom: 5px;
+  text-decoration: none;
 }
 
 .skill-boxes {
@@ -367,7 +370,7 @@ input {
   border-radius: 50%;
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 650px) {
   * {
   }
   body {
